@@ -3,17 +3,31 @@ package de.fu_berlin.inf.gmanda.util;
 import java.io.FileNotFoundException;
 import java.io.PrintWriter;
 
+import org.apache.commons.io.output.NullOutputStream;
+
 public class CStringWriter implements CStringBuilder {
 	
 	PrintWriter writer;
 	
-	public CStringWriter(String filename){
-		try {
-			writer = new PrintWriter(filename);
-		} catch (FileNotFoundException e) {
-			e.printStackTrace();
-			writer = null;
+	String filename;
+	
+	public PrintWriter getWriter(){
+		if (writer == null){
+			if (filename != null){
+				try {
+					return writer = new PrintWriter(filename);
+				} catch (FileNotFoundException e) {
+					e.printStackTrace();
+				}
+			}
+			writer = new PrintWriter(new NullOutputStream());
 		}
+		
+		return writer;
+	}
+	
+	public CStringWriter(String filename){
+		this.filename = filename;
 	}
 	
 	public String empty = "                ";
@@ -57,20 +71,20 @@ public class CStringWriter implements CStringBuilder {
 	}
 	
 	public void writeln(String string, int indent){
-		if (writer != null){
-			if (indent > 0){
-				string = emptyString(indent) + string.replaceAll("\n", "\n" + emptyString(indent));
-			}
-			writer.println(string);
+		if (indent > 0){
+			string = emptyString(indent) + string.replaceAll("\n", "\n" + emptyString(indent));
 		}
+		getWriter().println(string);
 	}
 	
 	public void flush(){
+		// Do not create writer unnecessary
 		if (writer != null)
 			writer.flush();
 	}
 	
 	public void close(){
+		// Do not create writer unnecessary
 		if (writer != null)
 			writer.close();
 	}
