@@ -7,14 +7,16 @@
       <code>project description=\&quot;Read until 13819\&quot;</code>
       <metadata>
         <property name="datafolder" value="D:\svn\sci\mail.ti\data\data"/>
-        <property name="lastseen" value="2008-04-18T16:11:00.879+02:00"/>
+        <property name="lastseen" value="2008-07-31T23:06:35.725+02:00"/>
         <property name="list" value="comp.desktop.xfce.devel.version4"/>
       </metadata>
       <document filename="gmane://gmane.comp.desktop.xfce.devel.version4.12610">
+        <code>hello world, my friend</code>
         <metadata>
           <property name="date" value="2007-01-01T17:41:00.000+01:00"/>
           <property name="from" value="Jasper Huijsmans &lt;jasper@xfce.org&gt;"/>
           <property name="id" value="12610"/>
+          <property name="lastseen" value="2008-07-31T23:06:36.308+02:00"/>
           <property name="list" value="gmane.comp.desktop.xfce.devel.version4"/>
           <property name="subject" value="Re: panel multiscreen problems"/>
           <property name="title" value="12610 - Re: panel multiscreen problems"/>
@@ -968,14 +970,16 @@
     <document>
       <metadata>
         <property name="datafolder" value="D:\svn\sci\mail.ti\data\data"/>
-        <property name="lastseen" value="2008-04-21T15:37:04.391+02:00"/>
+        <property name="lastseen" value="2008-07-31T23:06:35.244+02:00"/>
         <property name="list" value="comp.desktop.rox.devel"/>
       </metadata>
       <document filename="gmane://gmane.comp.desktop.rox.devel.9036">
+        <code>dasdfasdfasdfhello world   </code>
         <metadata>
           <property name="date" value="2007-01-03T16:08:00.000+01:00"/>
           <property name="from" value="Thomas Leonard &lt;talex5@gmail.com&gt;"/>
           <property name="id" value="9036"/>
+          <property name="lastseen" value="2008-07-31T22:40:28.080+02:00"/>
           <property name="list" value="gmane.comp.desktop.rox.devel"/>
           <property name="subject" value="Font configlet"/>
           <property name="title" value="9036 - Font configlet"/>
@@ -1062,10 +1066,12 @@
         </document>
       </document>
       <document filename="gmane://gmane.comp.desktop.rox.devel.9044">
+        <code>hello</code>
         <metadata>
           <property name="date" value="2007-01-06T18:22:00.000+01:00"/>
           <property name="from" value="Peter &lt;sw98234-PkbjNfxxIARBDgjK7y7TUQ@public.gmane.org&gt;"/>
           <property name="id" value="9044"/>
+          <property name="lastseen" value="2008-07-31T22:40:27.728+02:00"/>
           <property name="list" value="gmane.comp.desktop.rox.devel"/>
           <property name="subject" value="Patch submission: Fit Backdrop to window"/>
           <property name="title" value="9044 - Patch submission: Fit Backdrop to window"/>
@@ -2480,7 +2486,7 @@
     <document>
       <metadata>
         <property name="datafolder" value="D:\svn\sci\mail.ti\data\data"/>
-        <property name="lastseen" value="2008-04-15T17:28:50.901+02:00"/>
+        <property name="lastseen" value="2008-07-31T22:36:06.624+02:00"/>
         <property name="list" value="gmane.comp.emulators.freedos.devel"/>
       </metadata>
       <document filename="gmane://gmane.comp.emulators.freedos.devel.4626">
@@ -2506,10 +2512,12 @@
         </document>
       </document>
       <document filename="gmane://gmane.comp.emulators.freedos.devel.4628">
+        <code>Hello World</code>
         <metadata>
           <property name="date" value="2007-01-02T17:41:00.000+01:00"/>
           <property name="from" value="Japheth &lt;mail@japheth.de&gt;"/>
           <property name="id" value="4628"/>
+          <property name="lastseen" value="2008-07-31T22:36:07.710+02:00"/>
           <property name="list" value="gmane.comp.emulators.freedos.devel"/>
           <property name="subject" value="Re: OpenWatcom updates"/>
           <property name="title" value="4628 - Re: OpenWatcom updates"/>
